data/derived/sp14/progs/unify/prog1248.ml.out
Characters 336-337:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type int -> int list * int -> int list
       but an expression was expected of type int -> int list * int -> int
       Type int list is not compatible with type int 
